api 연결
버스랑 기차의 시간표를 알려주는 것, => 알려준대로 일정 짜주는 것까지 할 예정