@@ -1,19 +1,16 @@
 package com.korea.trip.util;
 
-import java.util.*;
-import java.util.stream.Collectors;
-
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.korea.trip.dto.BusInfo;
+import com.korea.trip.dto.TerminalInfo;
+import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.korea.trip.dto.BusInfo;
-import com.korea.trip.dto.TerminalInfo;
-
-import jakarta.annotation.PostConstruct;
+import java.util.*;
 
 @Component
 public class BusUtil {
@@ -22,154 +19,140 @@ public class BusUtil {
     private String serviceKey;
 
     private final RestTemplate restTemplate = new RestTemplate();
+    private final ObjectMapper mapper = new ObjectMapper();
+
     private Map<String, List<TerminalInfo>> cityTerminalMap = new HashMap<>();
 
-    // 사전 도시명 키워드 (필요시 추가)
-    private static final Set<String> KNOWN_CITIES = Set.of(
-        "서울", "부산", "대구", "인천", "광주", "대전", "울산", 
-        "세종", "수원", "창원", "용인", "성남", "고양", "청주", 
-        "전주", "천안", "안산", "포항", "김해", "진주", "제주"
-    );
+    public Map<String, List<TerminalInfo>> getCityTerminalMap() {
+        return cityTerminalMap;
+    }
 
     @PostConstruct
     public void init() {
-        cityTerminalMap = fetchTerminalMap();
+        cityTerminalMap = fetchCityTerminalMap();
         System.out.println("✅ 버스터미널 목록 로딩 완료: " + cityTerminalMap.size() + "개 도시");
-        cityTerminalMap.forEach((city, list) -> {
-            System.out.println(city + " → 터미널 수: " + list.size() + ", 터미널들: " + 
-                list.stream().map(t -> t.getTerminalName()).collect(Collectors.toList()));
-        });
     }
 
-    public Map<String, List<TerminalInfo>> fetchTerminalMap() {
+    public Map<String, List<TerminalInfo>> fetchCityTerminalMap() {
         Map<String, List<TerminalInfo>> map = new HashMap<>();
-
-        String url = "https://apis.data.go.kr/1613000/ExpBusInfoService/getExpBusTrminlList"
-                + "?serviceKey=" + serviceKey + "&_type=json" + "&numOfRows=300&pageNo=1";
+        String url = "https://apis.data.go.kr/1613000/ExpBusInfoService/getCtyCodeList"
+                + "?serviceKey=" + serviceKey + "&_type=json";
 
         try {
-            ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            ObjectMapper mapper = new ObjectMapper();
-            JsonNode items = mapper.readTree(response.getBody()).path("response").path("body").path("items").path("item");
+            ResponseEntity<String> cityResponse = restTemplate.getForEntity(url, String.class);
+            JsonNode cities = mapper.readTree(cityResponse.getBody())
+                    .path("response").path("body").path("items").path("item");
 
-            if (items.isArray()) {
-                for (JsonNode item : items) {
-                    String terminalId = item.path("terminalId").asText();
-                    String terminalNm = item.path("terminalNm").asText();
+            for (JsonNode city : cities) {
+                String cityCode = city.path("citycode").asText();
+                String cityName = city.path("cityname").asText();
 
-                    String city = extractCityFromTerminalName(terminalNm);
-                    TerminalInfo terminalInfo = new TerminalInfo(terminalId, terminalNm, city);
+                String terminalUrl = "https://apis.data.go.kr/1613000/ExpBusInfoService/getCtyAcctoBtsStaList"
+                        + "?serviceKey=" + serviceKey + "&_type=json"
+                        + "&cityCode=" + cityCode;
 
-                    map.computeIfAbsent(city, k -> new ArrayList<>()).add(terminalInfo);
+                try {
+                    ResponseEntity<String> terminalResponse = restTemplate.getForEntity(terminalUrl, String.class);
+                    JsonNode items = mapper.readTree(terminalResponse.getBody())
+                            .path("response").path("body").path("items").path("item");
+
+                    List<TerminalInfo> terminals = new ArrayList<>();
+                    if (items.isArray()) {
+                        for (JsonNode item : items) {
+                            String id = item.path("terminalId").asText();
+                            String name = item.path("terminalNm").asText();
+                            terminals.add(new TerminalInfo(id, name,cityName));
+                        }
+                    } else if (items.isObject()) {
+                        String id = items.path("terminalId").asText();
+                        String name = items.path("terminalNm").asText();
+                        terminals.add(new TerminalInfo(id, name,cityName));
+                    }
+                    map.put(cityName, terminals);
+                } catch (Exception e) {
+                    System.err.println("🛑 [" + cityName + "] 터미널 조회 실패: " + e.getMessage());
                 }
-            } else if (items.isObject()) {
-                String terminalId = items.path("terminalId").asText();
-                String terminalNm = items.path("terminalNm").asText();
-
-                String city = extractCityFromTerminalName(terminalNm);
-                TerminalInfo terminalInfo = new TerminalInfo(terminalId, terminalNm, city);
-
-                map.computeIfAbsent(city, k -> new ArrayList<>()).add(terminalInfo);
             }
+
         } catch (Exception e) {
-            System.err.println("🛑 버스터미널 목록 로딩 실패: " + e.getMessage());
+            System.err.println("🛑 도시 코드 목록 로딩 실패 (버스): " + e.getMessage());
         }
 
         return map;
     }
-
-    private String extractCityFromTerminalName(String terminalNm) {
-        String clean = terminalNm.replaceAll("고속|시외|종합|터미널|버스터미널", "").trim().toLowerCase();
-
-        for (String city : KNOWN_CITIES) {
-            if (clean.contains(city.toLowerCase())) {
-                return city;
-            }
-        }
-
-        return "기타";
-    }
-
-    // 도시명 기준으로 터미널 ID 리스트 가져오기
-    public List<String> getTerminalIdsByCity(String cityName) {
-        List<TerminalInfo> terminals = cityTerminalMap.get(cityName);
-        if (terminals == null) return List.of();
-        List<String> ids = new ArrayList<>();
-        for (TerminalInfo t : terminals) {
-            ids.add(t.getTerminalId());
-        }
-        return ids;
-    }
-
-    // 단일 터미널 ID 기준 버스 정보 조회
-    public List<BusInfo> fetchBus(String depTerminalId, String arrTerminalId, String date) {
-        List<BusInfo> results = new ArrayList<>();
+    
+    
+    
+    public List<BusInfo> fetchBus(String depTerminalId, String arrTerminalId, String date, TimeRange timeRange) {
+        List<BusInfo> allFetched = new ArrayList<>();
+        List<BusInfo> results;
 
         String url = "https://apis.data.go.kr/1613000/ExpBusInfoService/getStrtpntAlocFndExpbusInfo"
                 + "?serviceKey=" + serviceKey
-                + "&numOfRows=100&pageNo=1&_type=json"
+                + "&_type=json"
                 + "&depTerminalId=" + depTerminalId
                 + "&arrTerminalId=" + arrTerminalId
                 + "&depPlandTime=" + date;
 
         try {
             ResponseEntity<String> response = restTemplate.getForEntity(url, String.class);
-            ObjectMapper mapper = new ObjectMapper();
             JsonNode items = mapper.readTree(response.getBody())
                     .path("response").path("body").path("items").path("item");
 
             if (items.isArray()) {
                 for (JsonNode item : items) {
-                    BusInfo busInfo = new BusInfo(
-                            item.path("gradeNm").asText(),
-                            item.path("routeId").asText(),
-                            item.path("depPlandTime").asText(),
-                            item.path("arrPlandTime").asText(),
-                            item.path("depPlaceNm").asText(),
-                            item.path("arrPlaceNm").asText(),
-                            item.path("charge").asInt()
+                    BusInfo bus = new BusInfo(
+                        item.path("busGradeName").asText(),
+                        item.path("busNo").asText(),
+                        item.path("depPlandTime").asText(),
+                        item.path("arrPlandTime").asText(),
+                        item.path("depPlaceName").asText(),
+                        item.path("arrPlaceName").asText(),
+                        item.path("adultCharge").asInt()
                     );
-                    results.add(busInfo);
+                    allFetched.add(bus);
                 }
             } else if (items.isObject()) {
-                BusInfo busInfo = new BusInfo(
-                        items.path("gradeNm").asText(),
-                        items.path("routeId").asText(),
-                        items.path("depPlandTime").asText(),
-                        items.path("arrPlandTime").asText(),
-                        items.path("depPlaceNm").asText(),
-                        items.path("arrPlaceNm").asText(),
-                        items.path("charge").asInt()
+                JsonNode item = items;
+                BusInfo bus = new BusInfo(
+                    item.path("busGradeName").asText(),
+                    item.path("busNo").asText(),
+                    item.path("depPlandTime").asText(),
+                    item.path("arrPlandTime").asText(),
+                    item.path("depPlaceName").asText(),
+                    item.path("arrPlaceName").asText(),
+                    item.path("adultCharge").asInt()
                 );
-                results.add(busInfo);
+                allFetched.add(bus);
             }
+
+            if (timeRange != null) {
+                results = allFetched.stream()
+                    .filter(bus -> timeRange.isInRange(bus.getDepPlandTime()))
+                    .toList();
+            } else {
+                results = allFetched;
+            }
+
         } catch (Exception e) {
-            System.err.println("🛑 버스 정보 조회 실패: " + e.getMessage());
+            System.err.println("🛑 버스 조회 실패: " + e.getMessage());
+            return List.of();
         }
 
         return results;
     }
 
-    // 도시명 기준으로 모든 조합 버스 조회 및 문자열 리스트 반환
-    public List<String> fetchBusByCityName(String depCity, String arrCity, String date) {
-        List<String> depIds = getTerminalIdsByCity(depCity);
-        List<String> arrIds = getTerminalIdsByCity(arrCity);
 
-        List<BusInfo> allBuses = new ArrayList<>();
-        for (String depId : depIds) {
-            for (String arrId : arrIds) {
-                allBuses.addAll(fetchBus(depId, arrId, date));
-            }
+    public List<String> getTerminalIdsByCity(String cityName) {
+        if (cityName == null || cityName.isEmpty()) {
+            return List.of();
         }
-
-        return allBuses.stream()
-                .map(bus -> String.format("%s | %s → %s | %d원 | %s → %s",
-                        bus.getGradeNm(),
-                        bus.getDepPlaceNm(),
-                        bus.getArrPlaceNm(),
-                        bus.getCharge(),
-                        bus.getDepPlandTime().substring(8, 12),
-                        bus.getArrPlandTime().substring(8, 12)))
-                .collect(Collectors.toList());
+        List<TerminalInfo> terminals = cityTerminalMap.get(cityName);
+        if (terminals == null || terminals.isEmpty()) {
+            return List.of();
+        }
+        return terminals.stream()
+                .map(TerminalInfo::getTerminalId)
+                .toList();
     }
 }
